table scrollbar fix

--- a/src/app.scss
+++ b/src/app.scss
@@ -80,6 +80,11 @@ html{
             padding: 1rem 2rem;
         }
     }
+    .table-wrapper{
+        &::-webkit-scrollbar-track{
+            background-color: white;
+        }
+    }
 }
 
 @mixin button {
